--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="#violations">Violations</a></li>
                 <li><a href="#evidence">Evidence</a></li>
                 <li><a href="#petition">Sign Petition</a></li>
+                <li><a href="#share">Share</a></li>
                 <li><a href="#action">Take Action</a></li>
             </ul>
         </div>
@@ -325,6 +326,59 @@
         </div>
     </section>
 
+    <section id="share" class="section">
+        <div class="container">
+            <h2>Spread the Word</h2>
+            <p class="intro">Share this petition and demand accountability for Mandela House residents</p>
+
+            <div class="share-buttons">
+                <button class="share-btn share-facebook" onclick="shareOnFacebook()">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                    </svg>
+                    Facebook
+                </button>
+
+                <button class="share-btn share-twitter" onclick="shareOnTwitter()">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                    </svg>
+                    Share on X
+                </button>
+
+                <button class="share-btn share-linkedin" onclick="shareOnLinkedIn()">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                    </svg>
+                    LinkedIn
+                </button>
+
+                <button class="share-btn share-whatsapp" onclick="shareOnWhatsApp()">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+                    </svg>
+                    WhatsApp
+                </button>
+
+                <button class="share-btn share-email" onclick="shareViaEmail()">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                    </svg>
+                    Email
+                </button>
+
+                <button class="share-btn share-copy" onclick="copyLink()">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
+                    </svg>
+                    Copy Link
+                </button>
+            </div>
+
+            <div id="copyNotification" class="copy-notification">Link copied to clipboard!</div>
+        </div>
+    </section>
+
     <section id="action" class="section cta-section">
         <div class="container">
             <h2>Demand Accountability</h2>
@@ -516,6 +570,110 @@
             submitButton.textContent = originalText;
             submitButton.disabled = false;
         });
+
+        // Social Media Sharing Functions
+        function getShareUrl() {
+            return window.location.href.split('#')[0];
+        }
+
+        function getShareText() {
+            return 'Demand justice for Mandela House residents! Over $70 million in public funding - where did it go? Sign the petition and demand accountability.';
+        }
+
+        function shareOnFacebook() {
+            const url = encodeURIComponent(getShareUrl());
+            window.open(
+                `https://www.facebook.com/sharer/sharer.php?u=${url}`,
+                'facebook-share',
+                'width=600,height=400'
+            );
+        }
+
+        function shareOnTwitter() {
+            const url = encodeURIComponent(getShareUrl());
+            const text = encodeURIComponent(getShareText());
+            window.open(
+                `https://twitter.com/intent/tweet?url=${url}&text=${text}`,
+                'twitter-share',
+                'width=600,height=400'
+            );
+        }
+
+        function shareOnLinkedIn() {
+            const url = encodeURIComponent(getShareUrl());
+            window.open(
+                `https://www.linkedin.com/sharing/share-offsite/?url=${url}`,
+                'linkedin-share',
+                'width=600,height=600'
+            );
+        }
+
+        function shareOnWhatsApp() {
+            const url = encodeURIComponent(getShareUrl());
+            const text = encodeURIComponent(getShareText() + ' ' + getShareUrl());
+            // Use different URLs for mobile vs desktop
+            const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+            const whatsappUrl = isMobile
+                ? `whatsapp://send?text=${text}`
+                : `https://web.whatsapp.com/send?text=${text}`;
+            window.open(whatsappUrl, '_blank');
+        }
+
+        function shareViaEmail() {
+            const subject = encodeURIComponent('Demand Justice for Mandela House Residents');
+            const body = encodeURIComponent(
+                getShareText() + '\n\n' +
+                'Learn more and sign the petition:\n' +
+                getShareUrl() + '\n\n' +
+                'This is YOUR money. These are YOUR neighbors. This affects YOUR community.\n\n' +
+                'Share this petition and demand accountability.'
+            );
+            window.location.href = `mailto:?subject=${subject}&body=${body}`;
+        }
+
+        function copyLink() {
+            const url = getShareUrl();
+
+            // Try modern clipboard API first
+            if (navigator.clipboard && navigator.clipboard.writeText) {
+                navigator.clipboard.writeText(url).then(() => {
+                    showCopyNotification();
+                }).catch(() => {
+                    // Fallback if clipboard API fails
+                    fallbackCopy(url);
+                });
+            } else {
+                // Fallback for older browsers
+                fallbackCopy(url);
+            }
+        }
+
+        function fallbackCopy(text) {
+            const textarea = document.createElement('textarea');
+            textarea.value = text;
+            textarea.style.position = 'fixed';
+            textarea.style.opacity = '0';
+            document.body.appendChild(textarea);
+            textarea.select();
+
+            try {
+                document.execCommand('copy');
+                showCopyNotification();
+            } catch (err) {
+                alert('Failed to copy link. Please copy manually: ' + text);
+            }
+
+            document.body.removeChild(textarea);
+        }
+
+        function showCopyNotification() {
+            const notification = document.getElementById('copyNotification');
+            notification.classList.add('show');
+
+            setTimeout(() => {
+                notification.classList.remove('show');
+            }, 3000);
+        }
     </script>
 </body>
 </html>
